ci: Fix auditwheel repair using "manylinux2014" instead of "manylinux1" env
By using manylinux2014 (based of Centos 7), this commit ensures the operating
system used to build the release (see [1]) is consistent and fixes the
following error:

  INFO:auditwheel.main_repair:Repairing castxml-0.post5+g98379ac-cp27-cp27mu-linux_x86_64.whl
  error: cannot repair

     "dist/castxml-0.post5+g98379ac-cp27-cp27mu-linux_x86_64.whl"

  to "manylinux1_x86_64" ABI because of the presence of too-recent versioned symbols.
  You'll need to compile the wheel on an older toolchain.

[1] https://github.com/CastXML/CastXMLSuperbuild/blob/75ec9ef4ad48ddab605627d783bfdee57fd7bcbf/azure-pipelines.yml#L13-L19

--- a/scikit-ci.yml
+++ b/scikit-ci.yml
@@ -51,7 +51,7 @@ build:
     commands:
       - |
         # Since there are no external shared libraries to bundle into the wheels
-        # this step will fixup the wheel switching from 'linux' to 'manylinux1' tag
+        # this step will fixup the wheel switching from 'linux' to 'manylinux' tag
         for whl in dist/*$(python -c "import wheel.pep425tags as w; print(w.get_platform())").whl; do
             auditwheel repair $whl -w ./dist/
             rm $whl
