--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -75,7 +75,7 @@ jobs:
             . ../venv/bin/activate
             pip install twine
             ls dist
-            twine upload -u $PYPI_USER -p $PYPI_PASSWORD --skip-existing dist/*
+            twine upload -u __token__ -p $PYPI_PASSWORD --skip-existing dist/*
 
 workflows:
   version: 2
