ci: Attempt to fix travis failure
This commit is another attempt to fix the following error:

  [scikit-ci] Executing: python ../addons/travis/install_pyenv.py
  dyld: Library not loaded: /usr/local/opt/gettext/lib/libintl.8.dylib
    Referenced from: /Users/travis/.pyenv/versions/3.7.2/bin/python
    Reason: Incompatible library version: python requires version 11.0.0 or later, but libintl.8.dylib provides version 10.0.0
  /var/folders/nz/vv4_9tw56nv9k3tkvyszvwg80000gn/T/tmpkZ_cPw.sh: line 2:  2976 Abort trap: 6           python ../addons/travis/install_pyenv.py

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,12 +27,20 @@ cache:
   directories:
     # Cache downloaded bottles
     - $HOME/Library/Caches/Homebrew
+    # Cache python dependencies
+    - /usr/local/opt/gettext
+    # pyenv
     - $HOME/.pyenv_cache
     - $HOME/.pyenv/versions/3.7.8
     - $HOME/.pyenv/versions/2.7.15
+    # scikit-ci-addons
     - $HOME/downloads
 
 before_install:
+  - |
+    if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
+      test -d /usr/local/opt/gettext/lib  || { rmdir /usr/local/opt/gettext; brew install gettext; }
+    fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then mkdir $HOME/bin; ln -s $(which pip2) $HOME/bin/pip; ln -s $(which python2) $HOME/bin/python; fi
   - python -m pip install --disable-pip-version-check --upgrade pip
   - pip install -U scikit-ci scikit-ci-addons
