--- a/.travis.yml
+++ b/.travis.yml
@@ -27,8 +27,6 @@ cache:
   directories:
     # Cache downloaded bottles
     - $HOME/Library/Caches/Homebrew
-    # Cache python dependencies
-    - /usr/local/opt/gettext
     # pyenv
     - $HOME/.pyenv_cache
     - $HOME/.pyenv/versions/3.7.8
@@ -38,8 +36,12 @@ cache:
 
 before_install:
   - |
-    if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then
-      test -d /usr/local/opt/gettext/lib  || { rmdir /usr/local/opt/gettext; brew install gettext; }
+    # Workaround the following error occuring because python installation is cached but gettext dependency is not
+    #   dyld: Library not loaded: /usr/local/opt/gettext/lib/libintl.8.dylib
+    #     Referenced from: /Users/travis/.pyenv/versions/3.7.2/bin/python
+    #     Reason: Incompatible library version: python requires version 11.0.0 or later, but libintl.8.dylib provides version 10.0.0
+    if [[ "$TRAVIS_OS_NAME" == "osx" && "${PYTHON_VERSION}" == "3.7.8" ]]; then
+      brew install gettext
     fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then mkdir $HOME/bin; ln -s $(which pip2) $HOME/bin/pip; ln -s $(which python2) $HOME/bin/python; fi
   - python -m pip install --disable-pip-version-check --upgrade pip
