--- a/.travis.yml
+++ b/.travis.yml
@@ -9,11 +9,13 @@ matrix:
   include:
 
     - os: osx
+      osx_image: xcode12
       language: generic
       env:
         - PYTHON_VERSION=3.7.8
 
     - os: osx
+      osx_image: xcode12
       language: generic
       env:
         - PYTHON_VERSION=2.7.15
@@ -35,6 +37,8 @@ cache:
     - $HOME/downloads
 
 before_install:
+  - brew update
+  - brew upgrade
   - |
     # Workaround the following error occuring because python installation is cached but gettext dependency is not
     #   dyld: Library not loaded: /usr/local/opt/gettext/lib/libintl.8.dylib
