Update to CastXML v0.4.5
Remove the specification of amd64 as those files are not the default
created by the script.

Remove the architecture specification for the Mac wheel.

--- a/scikit-ci.yml
+++ b/scikit-ci.yml
@@ -20,7 +20,7 @@ before_install:
         # See https://scikit-build.readthedocs.io/en/latest/generators.html#libstdc-vs-libc
         CPPFLAGS: "-stdlib=libstdc++"
         PATH: $<HOME>/.pyenv/versions/$<PYTHON_VERSION>/bin:$<PATH>
-        SETUP_BDIST_WHEEL_ARGS: --plat-name macosx-10.13-x86_64
+        SETUP_BDIST_WHEEL_ARGS: --plat-name macosx-10.13
       commands:
         - python ../addons/travis/install_pyenv.py
 
